# clinic_booking_api

./: .gitignore  Cargo.toml  Dockerfile  README.md  audit.toml
.github/workflows/: audit.yml  build.yml  lint.yml  test.yml
appointment_service/: Cargo.toml
appointment_service/src/: lib.rs
appointment_service/tests/: repository_tests.rs
clinic_core/: Cargo.toml
clinic_core/src/: main.rs
clinic_core/tests/: handler_tests.rs
clinic_service/: Cargo.toml
clinic_service/src/: handlers.rs  lib.rs  models.rs  repository.rs
common/: Cargo.toml
common/src/: auth.rs  db.rs  lib.rs
docs/: Docker.md  testing.md
doctor_service/: Cargo.toml
doctor_service/src/: lib.rs
patient_service/: Cargo.toml
patient_service/src/: error.rs  lib.rs
patient_service/tests/: handler_tests.rs
scripts/: fmt_and_lint.sh  populate_services.sh
