[package]
name = "clinic_core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true}
# import internally libraries below, and Rust crates above
appointment_service = { path = "../appointment_service"}
clinic_service = { path = "../clinic_service"}
doctor_service = { path = "../doctor_service"}
patient_service = { path = "../patient_service"}